--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 .nav > li > a.pair-first {padding-right:1px;}
-.nav > li > a.pair-second {padding-left:0;}
+.nav > li > a.pair-center {padding-left:0;padding-right:0;}
+.nav > li > a.pair-last {padding-left:0;}
 .bg-success {background-color: #ccffbb; border:1px solid #cccccc;}
 .bg-danger {background-color: #ffbbcc; border:1px solid #cccccc;}
 .highlight {padding:0.5em; background-color:#dff0d8;}
